create <nav> container on index.html

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,19 @@
   </head>
   <body>
     <div id="app">
+      <nav>
+        <div class="nav-container">
+          <div class="logo"></div>
+          <div class="nav-link-wrapper">
+            <ul class="nav-link">
+              <li>HOME</li>
+              <li>DESTINATION</li>
+              <li>CREW</li>
+              <li>TECHNOLOGY</li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </div>
     <script type="module" src="/main.js"></script>
   </body>
