create background-image in home page

--- a/src/index.html
+++ b/src/index.html
@@ -17,19 +17,29 @@
   </head>
   <body>
     <div id="app">
-      <nav>
-        <div class="nav-container">
-          <div class="logo"></div>
-          <div class="nav-link-wrapper">
-            <ul class="nav-link">
-              <li>HOME</li>
-              <li>DESTINATION</li>
-              <li>CREW</li>
-              <li>TECHNOLOGY</li>
-            </ul>
-          </div>
+      <div class="bg-wrapper">
+        <div class="ratio">
+          <img
+            class="ratio__img"
+            src="./assets/home/background-home-desktop.jpg"
+            alt="picture of moon - home"
+          />
         </div>
-      </nav>
+      </div>
+
+      <!-- <nav> -->
+      <!--   <div class="nav-container"> -->
+      <!--     <div class="logo"></div> -->
+      <!--     <div class="nav-link-wrapper"> -->
+      <!--       <ul class="nav-link"> -->
+      <!--         <li>HOME</li> -->
+      <!--         <li>DESTINATION</li> -->
+      <!--         <li>CREW</li> -->
+      <!--         <li>TECHNOLOGY</li> -->
+      <!--       </ul> -->
+      <!--     </div> -->
+      <!--   </div> -->
+      <!-- </nav> -->
     </div>
     <script type="module" src="/main.js"></script>
   </body>
