create bg-image cover

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
   <body>
     <div id="app">
       <div class="bg-wrapper">
+        <div class="ratio_cover">box</div>
         <div class="ratio">
           <img
             class="ratio__img"
