move <nav> to the top

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,23 @@
   </head>
   <body>
     <div id="app">
+      <nav>
+        <div class="nav_container">
+					<div class="nav_logo_wrapper">
+
+          <div class="logo"></div>
+					</div>
+          <div class="nav_link_wrapper">
+            <ul class="nav-link">
+              <li>HOME</li>
+              <li>DESTINATION</li>
+              <li>CREW</li>
+              <li>TECHNOLOGY</li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+
       <div class="bg-wrapper">
         <div class="ratio_cover">box</div>
         <div class="ratio">
@@ -27,20 +44,6 @@
           />
         </div>
       </div>
-
-      <!-- <nav> -->
-      <!--   <div class="nav-container"> -->
-      <!--     <div class="logo"></div> -->
-      <!--     <div class="nav-link-wrapper"> -->
-      <!--       <ul class="nav-link"> -->
-      <!--         <li>HOME</li> -->
-      <!--         <li>DESTINATION</li> -->
-      <!--         <li>CREW</li> -->
-      <!--         <li>TECHNOLOGY</li> -->
-      <!--       </ul> -->
-      <!--     </div> -->
-      <!--   </div> -->
-      <!-- </nav> -->
     </div>
     <script type="module" src="/main.js"></script>
   </body>
